Fix issue with stat container wrap when resizing

--- a/style/main.css
+++ b/style/main.css
@@ -32,7 +32,7 @@ section {
 
 [data-link] {
   cursor: pointer;
-} 
+}
 
 /** HEADER */
 
@@ -257,6 +257,7 @@ nav .icon {
   width: 90%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin-top: 150px;
   justify-content: space-evenly;
 }
@@ -366,7 +367,7 @@ nav .icon {
   z-index: 2;
 }
 
-.event-card .card-head { 
+.event-card .card-head {
   position: relative;
   display: flex;
   align-items: center;
